# patched

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
patched_macros/: Cargo.toml
patched_macros/src/: expand.rs  lib.rs
patched_macros/src/internals/: ast.rs  attr.rs  context.rs  mod.rs  symbol.rs
src/: lib.rs
tests/: deep.rs  test.rs
tests/ui/: enum.rs  enum.stderr  union.rs  union.stderr
