[workspace]
members = ["patched_macros"]
resolver = "2"

[package]
name = "patched"
version = "0.2.0"
authors = ["Tristan Guichaoua <tguichaoua.dev@gmail.com>"]
edition = "2021"
description = "Macro for patch like structure"
keywords = ["macros", "patch"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tguichaoua/patched"

[features]
macros = ["dep:patched_macros"]

[dependencies]
patched_macros = { version = "0.2.0", path = "patched_macros", optional = true }

[dev-dependencies]
trybuild = "1"
